--- a/index.html
+++ b/index.html
@@ -2,16 +2,32 @@
 <html lang="ru">
   <head>
     <meta charset="uft-8" />
-    <title>Eyecenter</title>
+    <title>Surfers</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400i|Raleway:400,600,700|Roboto+Condensed:700" rel="stylesheet">
   </head>
   
   <body>
-    <header>
+    <header class="main-header">
       <div class="container">
-        <h1 class="logo">Surfers Co.</h1>
+        <div class="header-top clearfix">
+          <div class="header-top-left">
+            <a class="logo" href="index.html">Surfers Co.</h1>
+          </div>
+          <div class="header-top-right">
+            <nav>
+              <ul class="main-navigation">
+                <li><a href="#">boards</a></li>
+                <li><a href="#">accessories</a></li>
+                <li><a href="#">blog</a></li>
+                <li><a href="#">technology</a></li>
+                <li><a href="#">team</a></li>
+                <li><a href="#">dealers</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
     </header>
   </body>
