Added social btn

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container">
         <div class="header-top clearfix">
           <div class="header-top-left">
-            <a class="logo" href="index.html">Surfers Co.</h1>
+            <a class="logo" href="index.html">Surfers Co.</a>
           </div>
           <div class="header-top-right">
             <nav>
@@ -26,6 +26,11 @@
                 <li><a href="#">dealers</a></li>
               </ul>
             </nav>
+            <div class="social-block">
+              <a class="social-btn" href="#"></a>
+              <a class="social-btn" href="#"></a>
+              <a class="social-btn" href="#"></a>
+            </div>
           </div>
         </div>
       </div>
