Added slogan, fixed background

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
             </div>
           </div>
         </div>
+        <div class="header-bottom">
+          <h1>Ride every wave as if it's your last</h1>
+          <p>We love the motion of the ocean</p>
+        </div>
+        <section class="surfboards-catalog clearfix">
+          
+        </section>
       </div>
     </header>
   </body>
