Adde background to surfboards catalog

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
           <h1>Ride every wave as if it's your last</h1>
           <p>We love the motion of the ocean</p>
         </div>
-        <section class="surfboards-catalog clearfix">
-          
+        <section class="surfboards-catalog">
+          <div class="corner"></div>
+          <div class="boards-text">boards</div>
         </section>
       </div>
     </header>
