Added boards pics

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Surfers</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400i|Raleway:400,600,700|Roboto+Condensed:700" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400i|Raleway:400,600,700|Roboto+Condensed:700" rel="stylesheet"> -->
   </head>
   
   <body>
@@ -40,6 +40,24 @@
         <section class="surfboards-catalog">
           <div class="corner"></div>
           <div class="boards-text">boards</div>
+          <div class="boards-pics">
+            <input type="radio" id="pic-1" name="board-pic" checked/>
+            <input type="radio" id="pic-2" name="board-pic"/>
+            <input type="radio" id="pic-3" name="board-pic"/>
+            <input type="radio" id="pic-4" name="board-pic"/>
+            <div class="pic-control">
+              <label for="pic-1"></label>
+              <label for="pic-2"></label>
+              <label for="pic-3"></label>
+              <label for="pic-4"></label>
+            </div>
+            <div class="images">
+              <img src="img/Board1.png" />
+              <img src="img/Board2.png" />
+              <img src="img/Board3.png" />
+              <img src="img/Board4.png" />
+            </div>
+          </div>
         </section>
       </div>
     </header>
