Making left side of boards catalog

--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
               <img src="img/Board4.png" />
             </div>
           </div>
+          <div class="board-info">
+            <h2>JR Surfboards The Donny Stoker Yellow/Green Rail Fade</h2>
+            <div class="top-block clearfix">
+              <ul class="raiting">
+                <li class="star"></li>
+                <li class="star"></li>
+                <li class="star"></li>
+                <li class="star"></li>
+                <li class="nostar"></li>
+                <li>(52)</li>
+              </ul>
+              <div class="counter">05/25</div>
+            </div>
+          </div>
         </section>
       </div>
     </header>
