Added tabs to board info

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Surfers</title>
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400i|Raleway:400,600,700|Roboto+Condensed:700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400i|Raleway:400,600,700|Roboto+Condensed:700" rel="stylesheet">
   </head>
   
   <body>
@@ -70,6 +70,45 @@
                 <li>(52)</li>
               </ul>
               <div class="counter">05/25</div>
+            </div>
+            <div class="board-about">
+              <input name="tab" id="tab1" type="radio" checked />
+              <div class="tab">
+                <h3>
+                  <label for="tab1">description</label>
+                </h3>
+                <p>
+                  Easy to ride, care free surfing craft that's fun for everyone, paddles well, 
+                  super fast down the line and great for any level of surfing depending on who rides it. 
+                  The Donny Stoker, a rework on design from stokesys first ever pro model. 
+                  A super easy to surf and fun board. The Donny Stoker is a board for total freesurfing expression.
+                </p>
+              </div>
+              <input name="tab" id="tab2" type="radio"/>
+              <div class="tab">
+                <h3>
+                  <label for="tab2">features</label>
+                </h3>
+                <p>
+                   This board is all about accessibility for everybody and offering super fun rides 
+                   at affordable prices. Whether you're after your first board or something for smaller days, 
+                   this board is for you.
+                </p>
+              </div>
+              <input name="tab" id="tab3" type="radio"/>
+              <div class="tab">
+                <h3>
+                  <label for="tab3">dimensions</label>
+                </h3>
+                <p>
+                  Surfboard dimensions vary board to board so we have included board specific size details 
+                  within the product description, further down the page. 
+                </p>
+              </div>
+            </div>
+            <div class="price">
+              $499.99
+            </div>
             </div>
           </div>
         </section>
